--- a/src/components/partials/Head.astro
+++ b/src/components/partials/Head.astro
@@ -17,12 +17,12 @@ const seoImage = generateAbsoluteUrl(image.src);
 <head>
   <meta charset="utf-8" />
   <link rel="sitemap" href="/sitemap-index.xml" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.png" />
   { seo?.canonicalUrl && <link rel="canonical" href={seo?.canonicalUrl} />}
   <title>{seo?.title || defaultSeo.title}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="generator" content={Astro.generator} />
-  <meta name="description" content={seo?.description || defaultSeo.description} />
+  <meta name="description" content={defaultSeo.description} />
   <slot name="keywords">
     <meta name="keywords" content={seo?.keywords || defaultSeo.keywords} />
   </slot>
