--- a/src/components/ui/Author.astro
+++ b/src/components/ui/Author.astro
@@ -4,7 +4,7 @@ import { getImage } from 'astro:assets';
 import type { AuthorInfo } from '@/lib/constants';
 
 interface Props extends AuthorInfo {}
-const { avatar, name, headline, username, location, pronouns } = Astro.props;
+const { avatar, name, headline, location } = Astro.props;
 
 const image = await getImage({ src: avatar, format: 'avif'});
 ---
@@ -15,28 +15,17 @@ const image = await getImage({ src: avatar, format: 'avif'});
       loading="eager"
       src={image.src}
       alt={name}
-      width={92}
-      height={92}
+      width={120}
+      height={120}
       class="rounded-full"
     />
   </div>
   <div class="flex flex-col gap-2">
-    <div class="flex flex-col gap-0.5">
-      <h1 class="text-xl font-semibold text-headings leading-tight">{name}</h1>
-      <p class="text-base text-foreground leading-tight">
-        {headline} in {' '}
-        <span>
-          {location}
-        </span>,
-        {pronouns && (
-          <span>
-            {pronouns}
-          </span>
-        )}
-      </p>
-    </div>
-    <span class="text-foreground text-sm bg-muted-foreground/40 px-2 py-1 rounded-full w-max leading-none">
-      {username}
-    </span>
+    <h1 class="text-xl font-semibold text-headings leading-tight">
+      {name}
+      <span class=" mt-0.5 block font-normal leading-normal text-base text-foreground leading-tight">
+        {headline}
+      </span>
+    </h1>
   </div>
 </div>
