--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,15 +4,13 @@ import BaseLayout from '@/layouts/BaseLayout.astro';
 import Container from '@/components/Container.astro';
 import Author from '@/components/ui/Author.astro';
 import { DEFAULT_CONFIGURATION } from '@/lib/constants';
-import WorkExperience from '@/components/ui/WorkExperience.astro';
-import Talk from '@/components/ui/Talk.astro';
+import { Image } from 'astro:assets';
+import imageOriginal from '../assets/images/image_original_furnivita_mobile.png';
 
 const entry = await getEntry('pages', 'homepage');
 const { Content } = await render(entry);
 
 const links = await getCollection('links');
-const jobs = await getCollection('jobs');
-const talks = await getCollection('talks');
 ---
 
 <BaseLayout seo={entry.data.seo}>
@@ -21,7 +19,7 @@ const talks = await getCollection('talks');
       <Author {...DEFAULT_CONFIGURATION.author} />
     </Container>
   </section>
-  <section class="py-6">
+  <section class="py-5">
     <Container>
       <div class="flex flex-col gap-6">
         <div class="flex items-center">
@@ -33,8 +31,23 @@ const talks = await getCollection('talks');
       </div>
     </Container>
   </section>
+
+  <section class="py-5">
+    <Container>
+      <div class="flex flex-col gap-6">
+        <div class="flex items-center">
+          <span class="text-headings">Availability</span>
+        </div>
+        <div class="prose dark:prose-invert">
+          <p>I’m currently available for new freelance projects and collaborations.
+            If you need a custom Shopify app or help automating your store’s operations, let’s talk.</p>
+        </div>
+      </div>
+    </Container>
+  </section>
+
   { links.length > 0 && (
-    <section class="py-8">
+    <section class="py-5">
       <Container>
         <div class="flex flex-col gap-5">
           <span class="text-headings">Contact</span>
@@ -52,28 +65,63 @@ const talks = await getCollection('talks');
       </Container>
     </section>
   )}
-  { jobs.length > 0 && (
-    <section class="py-6">
+
+
+
+    <section class="py-5">
       <Container>
         <div class="flex flex-col gap-5">
-          <span class="text-headings">Work Experience</span>
-        <ul class="flex flex-col gap-8">
-          {jobs.map((job) => <WorkExperience entry={job} />)}
-        </ul>
-      </div>
+          <span class="text-headings">Projects</span>
+          <div class="flex flex-col gap-8">
+            
+            <div class="flex flex-col gap-2">
+              <span class="text-headings">Custom SKU Sales Report App</span>
+              <span>
+                I built a custom SKU sales report app for a Shopify store that automates weekly reports and solves the common bundle‐counting issue. It breaks bundles into individual SKUs, separates US and non-US sales, and delivers accurate quantity and revenue figures in seconds—saving hours of manual spreadsheet work.
+              </span>
+              <div class="relative w-full" style="padding-bottom: 56.25%;">
+                <iframe
+                  class="absolute top-0 left-0 w-full h-full"
+                  src="https://www.youtube.com/embed/ZFUcAD8xf50?si=IqFugO9CrXzB_zKW"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+
+            <div class="flex flex-col gap-2">
+              <span class="text-headings">Building AI Image App</span>
+              <span>
+                Currently working on an AI‑powered Shopify app for product photography
+              </span>
+              <div class="relative w-full" style="padding-bottom: 56.25%;">
+                <iframe
+                  class="absolute top-0 left-0 w-full h-full"
+                  src="https://www.youtube.com/embed/39GGyNxuXJg?si=3YCzd0tlboHUFaK4"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                  referrerpolicy="strict-origin-when-cross-origin"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+
+            <div class="flex flex-col gap-2">
+              <span class="text-headings">Furnivita</span>
+              <span>
+                I built Furnivita.com from the ground up on Shopify, handling the full store setup, customizing a paid theme with new sections,
+                 implementing a product bundle system, and adding custom contact forms. You can view
+                it live at <a class="inline underline text-headings" href="https://furnivita.com" target="_blank">furnivita.com</a>
+              </span>
+              <Image src={imageOriginal} alt="Furniture store furnivita.com" width={600} />
+            </div>
+
+          </div>
+        </div>
       </Container>
     </section>
-  )}
-  {talks.length > 0 && (
-    <section class="py-6">
-      <Container>
-        <div class="flex flex-col gap-5">
-          <span class="text-headings">Speaking</span>
-        <ul class="flex flex-col gap-8">
-          {talks.map((talk) => <Talk entry={talk} />)}
-        </ul>
-      </div>
-      </Container>
-    </section>
-  )}
 </BaseLayout>
